<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NMedia</string>   // translatable="false"
    <string name="greeting">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="post_menu" translatable="false">Post Menu</string>
    <string name="numberOfLikes" translatable="false">10</string>
    <string name="numberOfShared" translatable="false">1099</string>
    <string name="numberOfOverlooked" translatable="false">8k</string>
    <string name="author" translatable="false">Netology. University of Internet Professions of the Future</string>
    <string name="published" translatable="false">May 30 at 21:05</string>
    <string name="content" translatable="false">Hi, this is a new Netology! Once upon a time, Netology began with intensive courses in online marketing. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of changes. - http://netolo.gy/fyb</string>
    <string name="edit_post" translatable="false">Edit</string>
    <string name="remove_post" translatable="false">Remove</string>
    <string name="publish_text" translatable="false">Publish a post</string>
    <string name="OK" translatable="false">OK</string>
    <string name="cancelEditing" translatable="false">Cancel editing</string>
    <string name="add_post" translatable="false">Add Post</string>
    <string name="save_post" translatable="false">Save Post</string>
    <string name="enter_confirmation">Enter the Confirmation</string>
    <string name="enter_video_link">Enter your video link</string>
    <string name="chooser_share_post" translatable="false">Share a post</string>
    <string name="app_not_found_error" translatable="false">App not found</string>
    <string name="video_image" translatable="false">Video image</string>
    <string name="play_video_netology" translatable="false">Play video Netology</string>
    <string name="error_url_validation">Invalid url</string>
    <string name="error_play_video_validation">Something went wrong! The video cannot be played!!!</string>
    <string name="channel_remote_name">Notification Service</string>
    <string name="channel_remote_description">Notifications from a remote service</string>
    <string name="notification_user_liked">User %1$s likes %2$s\'s post</string>
    <string name="notification_else_action">There have been changes made in %1$s the post. Let\'s look at it.</string>
    <string name="notification_user_share">User %1$s shared the post %2$s\'s</string>
    <string name="notification_new_post">User %1$s has created a new post</string>
    <string name="notification_new_viewer">User %1$s viewed the post</string>
</resources>