<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/common_spacing_16dp"
    tools:context=".activity.MainFragment">

    <ImageView
        android:contentDescription="@string/avatar_description"
        android:id="@+id/avatar"
        android:layout_height="@dimen/post_avatar_size_48dp"
        android:layout_width="@dimen/post_avatar_size_48dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:ellipsize="end"
        android:id="@+id/author"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing_8dp"
        android:layout_marginStart="@dimen/common_spacing_16dp"
        android:layout_width="0dp"
        android:singleLine="true"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menuPost"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:ellipsize="end"
        android:id="@+id/published"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:singleLine="true"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/author"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:contentDescription="@string/post_menu"
        android:id="@+id/menuPost"
        android:layout_height="43dp"
        android:layout_width="36dp"
        app:icon="@drawable/ic_baseline_more_vert_24dp"
        app:iconTint="@color/colorDarkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.button.MaterialButton
        style="@style/OurButtons"
        android:button="@color/ic_like_selector"
        android:checkable="true"
        android:id="@+id/likes"
        android:textColor="@color/purple_500"
        app:icon="@drawable/ic_baseline_favorite_like_24dp"
        app:iconTint="@color/colorLiked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="100500" />

    <com.google.android.material.button.MaterialButton
        style="@style/OurButtons"
        android:id="@+id/shared"
        app:icon="@drawable/ic_baseline_share_24dp"
        app:iconTint="@color/colorDarkGrey"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="100500" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/postVideo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="visible"
        app:icon="@drawable/ic_baseline_video_file_24dp"
        app:iconTint="@color/ic_shared_tint"
        app:layout_constraintStart_toEndOf="@id/shared"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom" />

    <com.google.android.material.button.MaterialButton
        style="@style/OurButtons"
        android:id="@+id/overlooked"
        app:icon="@drawable/ic_baseline_remove_red_eye_24dp"
        app:iconTint="@color/colorDarkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="16732" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, menuPost" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:autoLink="web"
        android:id="@+id/content"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:text="@string/content"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>